--- a/lab7.ipynb
+++ b/lab7.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -26,7 +26,7 @@
       "[0.376616910635983, 0.279911342787219, 0.173509392763606, 0.0426202745384502]\n",
       "--------------------------------------------------\n",
       "g(x) on the interval [1, e] sampled at x0 = 1, x1 = 1.5, x3 = 2, x4 = 2.5, x5 = e: \n",
-      "[6.86864825552958, 18.6709217390830, 50.7528272839302, 41.2623404405538]\n",
+      "[3.05150441620439, 16.0214714673757, 143.152743675372, 233.145818690360]\n",
       "--------------------------------------------------\n"
      ]
     }
@@ -68,9 +68,9 @@
     "print('-' * 50)\n",
     "\n",
     "# g(x) on the interval [1, e] sampled at x0 = 1, x1 = 1.5, x3 = 2, x4 = 2.5, x5 = e.\n",
-    "h(x) = ((e)^x)^2\n",
+    "h(x) = e^x^2\n",
     "print(\"g(x) on the interval [1, e] sampled at x0 = 1, x1 = 1.5, x3 = 2, x4 = 2.5, x5 = e: \")\n",
-    "print(TrapezoidRule(g, 1, e, [1, 1.5, 2, 2.5, e]))\n",
+    "print(TrapezoidRule(h, 1, e, [1, 1.5, 2, 2.5, e]))\n",
     "print('-' * 50)\n",
     "\n",
     "\n"
@@ -78,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -89,10 +89,10 @@
       "2.23722937528910\n",
       "--------------------------------------------------\n",
       "f (x) on the interval [1, e] sampled at x0 = 1, x1 = 1.5, x3 = 2, x4 = 2.5, x5 = e: \n",
-      "0.872657920725258\n",
+      "0.872657920725259\n",
       "--------------------------------------------------\n",
       "g(x) on the interval [1, e] sampled at x0 = 1, x1 = 1.5, x3 = 2, x4 = 2.5, x5 = e: \n",
-      "117.554737719097\n",
+      "395.371538249312\n",
       "--------------------------------------------------\n"
      ]
     }
@@ -107,19 +107,15 @@
     "    sum = 0\n",
     "    # loop over xvals\n",
     "    for i in range(len(xvals)-1):\n",
-    "        # add trapezoid area to sum as a decimal number\n",
-    "        #sum += ((xvals[i+1].n() - xvals[i].n()) * (f(xvals[i].n()) + f(xvals[i+1].n())) / 2)\n",
-    "\n",
     "        # do the same but without the .n() function\n",
-    "        sum += ((xvals[i+1] - xvals[i]) * (f(xvals[i]) + f(xvals[i+1])) / 2)\n",
-    "        sum\n",
+    "        sum += ((xvals[i+1] - xvals[i]) * ((f(xvals[i]) + f(xvals[i+1])) / 2))\n",
     "    # convert sum to a decimal number\n",
     "    # return sum\n",
     "    return sum.n()\n",
     "\n",
     "h(x) = sin(x) -1 + sqrt(x)\n",
     "f(X) = sin(x)/x\n",
-    "g(x) = ((e)^x)^2\n",
+    "g(x) = e^x^2\n",
     "interval1 = [1, 5]\n",
     "interval2 = [1, e]\n",
     "\n",
@@ -137,9 +133,9 @@
     "print('-' * 50)\n",
     "\n",
     "# g(x) on the interval [1, e] sampled at x0 = 1, x1 = 1.5, x3 = 2, x4 = 2.5, x5 = e.\n",
-    "h(x) = ((e)^x)^2\n",
+    "h(x) = e^x^2\n",
     "print(\"g(x) on the interval [1, e] sampled at x0 = 1, x1 = 1.5, x3 = 2, x4 = 2.5, x5 = e: \")\n",
-    "print(TrapezoidRule(g, 1, e, [1, 1.5, 2, 2.5, e]))\n",
+    "print(TrapezoidRule(h, 1, e, [1, 1.5, 2, 2.5, e]))\n",
     "print('-' * 50)\n",
     "\n",
     "\n"
